--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
     <section id="pantalla-inicio" class="pantalla">
+
+        <button onclick="activarPantallaCompleta()" class="btn-fullscreen" title="Pantalla Completa">⛶</button>
+
         <div class="contenedor-video">
             <video autoplay loop muted playsinline preload="auto" class="video-bienvenida">
                 <source src="fabri.mp4" type="video/mp4">
