--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Proyecto Rosco</title>
     <link rel="stylesheet" href="style.css">
     <link rel= "icon" href="niquito.jpg" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
 
